# hosa

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix
src/: config.rs  main.rs
src/models/: image.rs  text.rs
src/telegram/: bot.rs
