[package]
name = "hosa"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
bytes = "1.7.1"
serde = "1.0.208"
serde_json = "1.0.125"
teloxide = { version = "0.13", features = ["macros"] }
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
